--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ if(RESULT_ENABLE_TESTS)
   set(TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp
                    #${CMAKE_CURRENT_SOURCE_DIR}/tests/extensions.cpp
                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/assignment.cpp
+                   ${CMAKE_CURRENT_SOURCE_DIR}/tests/relops.cpp
                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/emplace.cpp
                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/issues.cpp
                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/bases.cpp
