Added more expected-failure tests.  Expanded assigment tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,26 +49,32 @@ if(RESULT_ENABLE_TESTS)
 		${CMAKE_CURRENT_SOURCE_DIR}/tests/result/swap.cpp
 		${CMAKE_CURRENT_SOURCE_DIR}/tests/result/constructors.cpp)
 
-	AddFailingTest(result_array_error_fail                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/array-error.fail.cpp)
-	AddFailingTest(result_array_fail                           ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/array.fail.cpp)
-	AddFailingTest(result_error_error_fail                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/error-error.fail.cpp)
-	AddFailingTest(result_error_fail                           ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/error.fail.cpp)
-	AddFailingTest(result_function_error_fail                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/function-error.fail.cpp)
-	AddFailingTest(result_function_fail                        ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/function.fail.cpp)
-	AddFailingTest(result_in_place_error_t_const_fail          ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_error_t.const.fail.cpp)
-	AddFailingTest(result_in_place_error_t_const_volatile_fail ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_error_t.const-volatile.fail.cpp)
-	AddFailingTest(result_in_place_error_t_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_error_t.fail.cpp)
-	AddFailingTest(result_in_place_error_t_volatile_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_error_t.volatile.fail.cpp)
-	AddFailingTest(result_in_place_t_const_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_t.const.fail.cpp)
-	AddFailingTest(result_in_place_t_const_volatile_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_t.const-volatile.fail.cpp)
-	AddFailingTest(result_in_place_t_fail                      ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_t.fail.cpp)
-	AddFailingTest(result_in_place_t_volatile_fail             ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/in_place_t.volatile.fail.cpp)
-	AddFailingTest(result_reference_error_fail                 ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/reference-error.fail.cpp)
-	AddFailingTest(result_reference_fail                       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/reference.fail.cpp)
-	AddFailingTest(result_void_error_fail                      ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/void-error.fail.cpp)
-	AddFailingTest(result_const_void_error_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/const-void-error.fail.cpp)
-	AddFailingTest(result_volatile_void_error_fail             ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/volatile-void-error.fail.cpp)
-	AddFailingTest(result_const_volatile_void_error_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/types/const-volatile-void-error.fail.cpp)
+	AddFailingTest(copy_assign_error_assign_fail ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-assign-error-assign.fail.cpp)
+	AddFailingTest(copy_assign_error_ctor_fail   ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-assign-error-ctor.fail.cpp)
+	AddFailingTest(copy_assign_value_assign_fail ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-assign-value-assign.fail.cpp)
+	AddFailingTest(copy_assign_value_ctor_fail   ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-assign-value-ctor.fail.cpp)
+	AddFailingTest(copy_ctor_error_fail          ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-ctor-error.fail.cpp)
+	AddFailingTest(copy_ctor_value_fail          ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/copy/copy-ctor-value.fail.cpp)
+	AddFailingTest(result_array_error_fail                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/array-error.fail.cpp)
+	AddFailingTest(result_array_fail                           ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/array.fail.cpp)
+	AddFailingTest(result_error_error_fail                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/error-error.fail.cpp)
+	AddFailingTest(result_error_fail                           ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/error.fail.cpp)
+	AddFailingTest(result_function_error_fail                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/function-error.fail.cpp)
+	AddFailingTest(result_function_fail                        ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/function.fail.cpp)
+	AddFailingTest(result_in_place_error_t_const_fail          ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_error_t.const.fail.cpp)
+	AddFailingTest(result_in_place_error_t_const_volatile_fail ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_error_t.const-volatile.fail.cpp)
+	AddFailingTest(result_in_place_error_t_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_error_t.fail.cpp)
+	AddFailingTest(result_in_place_error_t_volatile_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_error_t.volatile.fail.cpp)
+	AddFailingTest(result_in_place_t_const_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_t.const.fail.cpp)
+	AddFailingTest(result_in_place_t_const_volatile_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_t.const-volatile.fail.cpp)
+	AddFailingTest(result_in_place_t_fail                      ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_t.fail.cpp)
+	AddFailingTest(result_in_place_t_volatile_fail             ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/in_place_t.volatile.fail.cpp)
+	AddFailingTest(result_reference_error_fail                 ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/reference-error.fail.cpp)
+	AddFailingTest(result_reference_fail                       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/reference.fail.cpp)
+	AddFailingTest(result_void_error_fail                      ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/void-error.fail.cpp)
+	AddFailingTest(result_const_void_error_fail                ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/const-void-error.fail.cpp)
+	AddFailingTest(result_volatile_void_error_fail             ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/volatile-void-error.fail.cpp)
+	AddFailingTest(result_const_volatile_void_error_fail       ${CMAKE_CURRENT_SOURCE_DIR}/tests/result/fail/types/const-volatile-void-error.fail.cpp)
 
 	add_executable(result-tests ${TEST_SOURCES})
 
